# duckdb_pcap_reader

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: MainDistributionPipeline.yml
src/: duckdb_pcap.c  pcap_reader.c
src/include/: pcap_reader.h
test/: create_nanosecond_pcap.py  create_test_pcap.py  generate_pcap.py  test_stdin.py
test/data/: test.pcap  test_custom.pcap  test_nano.pcap
test/sql/: pcap_nanosecond.test  pcap_reader.test  stdin_test.test
